test/corpus/declarations.txt
===================
class
===================

class Main {}

---

(module (class_declaration (keyword) (identifier) (block)))

===================
class with type params
===================

class Main<T,U> {}

---

(module
  (class_declaration
    (keyword)
    (identifier)
    (type_params
      (type_param (identifier))
      (type_param (identifier))
    )
    (block)
  )
)


===================
class constructor
===================

class Main {
  function new(){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier) (function_arg_list) (block))
    )
  )
)


===================
class function
===================

class Main {
  function foo(){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier) (function_arg_list) (block))
    )
  )
)

===================
class function with type params
===================

class Main {
  function foo<T,U>(){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration
        (keyword)
        (identifier)
        (type_params
          (type_param (identifier))
          (type_param (identifier))
        )
        (function_arg_list)
        (block))
    )
  )
)


===================
class function with arg
===================

class Main {
  function foo(x){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (function_arg_list (function_arg (identifier)))
        (block)
      )
    )
  )
)

===================
class function with arg, types and default param.
===================

class Main {
  function foo(x:Int = 3, y:String){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier)
        (function_arg_list
          (function_arg (identifier) (type (identifier)) (integer))
          (function_arg (identifier) (type (identifier)))
        )
        (block)
      )
    )
  )
)

===================
class with runtime metadata
===================

@test
class Main {
}

---

(module
  (class_declaration
    (metadata (identifier))
    (keyword) (identifier)
    (block)
  )
)

===================
class with compile time metadata
===================

@:test
class Main {
}

---

(module
  (class_declaration
    (metadata (identifier))
    (keyword) (identifier)
    (block)
  )
)


===================
class function with runtime metadata
===================

class Main {
  @test
  function foo(){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration
        (metadata (identifier))
        (keyword)
        (identifier)
        (function_arg_list)
        (block)
      )
    )
  )
)

===================
class function with compile time metadata
===================

class Main {
  @:test
  function foo(){}
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration
        (metadata (identifier))
        (keyword)
        (identifier)
        (function_arg_list)
        (block)
      )
    )
  )
)

===================
class variable with runtime metadata
===================

class Main {
  @test
  var foo:Int;
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (metadata (identifier))
        (keyword)
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
class variable with compile time metadata
===================

class Main {
  @:test
  var foo:Int;
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (metadata (identifier))
        (keyword)
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
class public static inline function
===================

class Main {
  public static inline function foo(){}
}

---
(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration
      (keyword)
      (keyword)
      (keyword)
      (keyword)
      (identifier) (function_arg_list) (block))
    )
  )
)

===================
class function with declaration assignment statement
===================

class Main {
  function foo(){
    var x = 4;
    var y = 'test';
  }
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier) (function_arg_list)
        (block
          (variable_declaration (keyword) (identifier) (operator) (integer))
          (variable_declaration (keyword) (identifier) (operator) (string))
        )
      )
    )
  )
)

===================
class function with seperate declaration and assignment statements
===================

class Main {
  function foo(){
    var x;
    var y;

    x = 4;
    y = x;
  }
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (function_declaration (keyword) (identifier) (function_arg_list)
        (block
          (variable_declaration (keyword) (identifier))
          (variable_declaration (keyword) (identifier))
          (identifier) (operator) (integer)
          (identifier) (operator) (identifier)
        )
      )
    )
  )
)


===================
class variables
===================

class Main {
  public var x;
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (keyword)
        (keyword)
        (identifier)
      )
    )
  )
)

===================
class variables with basic type
===================

class Main {
  public var x:Int;
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (keyword)
        (keyword)
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
class variables with parameterized type
===================

class Main {
  public var x:Array<Int>;
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (keyword)
        (keyword)
        (identifier)
        (type 
          (complex_type
            (identifier)
            (complex_type (identifier)) 
          )
        )
      )
    )
  )
)


===================
class final variables with basic type
===================

class Main {
  public final x:Int;
}

---

(module
  (class_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (keyword)
        (keyword)
        (identifier)
        (type (identifier))
      )
    )
  )
)

===================
type def
===================

typedef MyType = {
  var x:Int;
}

---

(module
  (typedef_declaration (keyword) (identifier)
    (block
      (variable_declaration
        (keyword)
        (identifier)
        (type (identifier))
      )
    )
  )
)
