test/corpus/unary_operations.txt
===================
increment unop postfix
===================

class main {
  function test() {
    x++;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
          (identifier) (operator)
        )
      )
    )
  )
)

===================
increment unop prefix
===================

class main {
  function test() {
    ++x;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
          (operator) (identifier)
        )
      )
    )
  )
)

===================
decrement_unop postfix
===================

class main {
  function test() {
    x--;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
          (identifier) (operator)
        )
      )
    )
  )
)


===================
decrement_unop prefix
===================

class main {
  function test() {
    --x;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
           (operator) (identifier)
        )
      )
    )
  )
)

===================
logical not unop 
===================

class main {
  function test() {
    !x;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
           (operator) (identifier)
        )
      )
    )
  )
)

===================
negative unop 
===================

class main {
  function test() {
    -x;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
           (operator) (identifier)
        )
      )
    )
  )
)

===================
bitwise_negative_unop 
===================

class main {
  function test() {
    ~x;
  }
}

---
(module 
  (class_declaration (keyword) (identifier) 
    (block 
      (function_declaration (keyword) (identifier)
        (function_arg_list)
        (block
           (operator) (identifier)
        )
      )
    )
  )
)
